--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="cz.astrozor.meteorobserver"
-      android:versionCode="3"
-      android:versionName="0.1_EXPA">
+      package="cz.expaobserver"
+      android:versionCode="1"
+      android:versionName="2014.0">
     <uses-sdk android:minSdkVersion="8" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
@@ -29,4 +29,4 @@
                   android:label="@string/settings">
         </activity>
     </application>
-</manifest> 
+</manifest>
