--- a/app/signing.properties
+++ b/app/signing.properties
@@ -1,5 +1,5 @@
-STORE_FILE=
-STORE_PASSWORD=
-KEY_ALIAS=
-KEY_PASSWORD=
+STORE_FILE=placeholder
+STORE_PASSWORD=placeholder
+KEY_ALIAS=placeholder
+KEY_PASSWORD=placeholder
 
