--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,13 +8,27 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.WRITE_SETTINGS"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
 
     <uses-feature
         android:name="android.hardware.sensor.accelerometer"
         android:required="true"/>
+
     <uses-feature
         android:name="android.hardware.sensor.compass"
         android:required="true"/>
+
+    <!--<uses-feature-->
+        <!--android:name="android.hardware.sensor.light"-->
+        <!--android:required="false"/>-->
+
+    <!--<uses-feature-->
+        <!--android:name="android.hardware.camera"-->
+        <!--android:required="false"/>-->
+
+    <!--<uses-feature-->
+        <!--android:name="android.hardware.camera.autofocus"-->
+        <!--android:required="false"/>-->
 
     <application
         android:name=".ui.ObserverApplication"
@@ -25,7 +39,7 @@
         <activity
             android:name=".ui.ObserverActivity"
             android:label="@string/app_name"
-            android:theme="@style/Theme.MeteorObserver.Red">
+            android:theme="@style/Theme.MeteorObserver.Red.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
