--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     jcenter()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:1.4.0-beta1'
+    classpath 'com.android.tools.build:gradle:1.5.0'
   }
 }
 
@@ -12,4 +12,12 @@ allprojects {
   repositories {
     jcenter()
   }
+}
+
+ext {
+  compileSdkVersion = 23
+  buildToolsVersion = "23.0.2"
+  supportLibVersion = "23.1.1"
+  gmsLibVersion = "8.4.0"
+  awsLibVersion = "2.2.7"
 }
